--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Интернет-магазин электроники</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	
+<h1>Привет</h1>
+
+</body>
+</html>
