--- a/index.html
+++ b/index.html
@@ -2,12 +2,79 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Интернет-магазин электроники</title>
+	<title>Iphone 6</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	
-<h1>Мой первый магазин на Github!</h1>
+        <header>
+            <div class="header">
+                <div class="header__logo">
+                        <img src="img/logo.png" alt="logo">
+                        <ul class="header__top-menu">
+                            <li class="top-menu__li">Home</li>
+                            <li class="top-menu__li">Devices</li>
+                            <li class="top-menu__li">Delivery & Payment</li>
+                            <li class="top-menu__li">Guarantee</li>
+                            <li class="top-menu__li">About Us</li>
+                        </ul>
+                        <div class="cart top">
+                            <div class="cart__position">
+                                <img class="cart__img" src="img/cart.png" alt="cart" >
+                                <span class="cart__span cart__position_span">
+            			cart
+            			</span>
+                                <span class="cart__span_price">
+            			0
+            			</span>
+                            </div>
+                            <button class="button top">
+                                sign in
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
+    <div class="header menu header menu__position">
+        <ul class="header menu__list top">
+            <li class="header menu__li">Top Sales</li>
+            <li class="header menu__li">Brand Focus</li>
+            <li class="header menu__li">Hi-tech</li>
+            <li class="header menu__li">Best Sellers</li>
+            <li class="header menu__li">Projects</li>
+        </ul>
+        <div class="header menu__block-right">
+            <span class="header menu__span header menu__span-position top">
+                    		support
+                    	</span>
+            <img class="search" src="img/search Icon.png" alt="search" >
+            <input class="header menu__input-search" type="search" placeholder="I'm looking for ..." >
+        </div>
+
+    </header>
+    <section class="phone-section ">
+        <div class="phone__block">
+            <div class="phone-block__relative">
+                <h1 class="phone-block__h1">
+    		iPhone 6 32Gb<br>
+Black
+    	</h1>
+                <p class="phone-block__p phone-block__p_relative">
+                    At first, for some time, I was not able to answer him one word; but as he
+                    <br> had taken me in his arms I held fast by him, or I should have fallen to the
+                    <br>ground.
+                </p>
+                <button class="button button__buy button-position top">
+                    buy now
+                </button>
+            </div>
+            <div class="phone-block2">
+                <img class="phone__big" src="img/iphone.png" alt="">
+            </div>
+        </div>
+    </section>
+    </div>
 </body>
 </html>
