--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
         <header>
             <div class="header">
-                <div class="header__logo">
+            	<div class="menu">
+                    <div class="header__logo">
                         <img src="img/logo.png" alt="logo">
                         <ul class="header__top-menu">
                             <li class="top-menu__li">Home</li>
@@ -36,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-
+            <div>
     <div class="header menu header menu__position">
         <ul class="header menu__list top">
             <li class="header menu__li">Top Sales</li>
