--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <header>
             <div class="header">
             	<div class="menu">
-                    <div class="header__logo">
-                        <img src="img/logo.png" alt="logo">
+                        <img class="header__logo" src="img/logo.png" alt="logo">
                         <ul class="header__top-menu">
                             <li class="top-menu__li">Home</li>
                             <li class="top-menu__li">Devices</li>
@@ -35,9 +34,8 @@
                                 sign in
                             </button>
                         </div>
-                    </div>
-                </div>
-            <div>
+             </div>   </div>
+            
     <div class="header menu header menu__position">
         <ul class="header menu__list top">
             <li class="header menu__li">Top Sales</li>
