--- a/index.html
+++ b/index.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Iphone 6</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700">
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
+    <div class="wrapper">
         <header>
-            <div class="header">
-            	<div class="menu">
-                        <img class="header__logo" src="img/logo.png" alt="logo">
-                        <ul class="header__top-menu">
+            <div class="block__border">
+                <div class="container container__position">
+                    <div class="block__flex">
+                        <img src="img/logo.png" alt="">
+                        <ul class="top-menu">
                             <li class="top-menu__li">Home</li>
                             <li class="top-menu__li">Devices</li>
                             <li class="top-menu__li">Delivery & Payment</li>
                             <li class="top-menu__li">Guarantee</li>
                             <li class="top-menu__li">About Us</li>
                         </ul>
-                        <div class="cart top">
-                            <div class="cart__position">
-                                <img class="cart__img" src="img/cart.png" alt="cart" >
-                                <span class="cart__span cart__position_span">
+                        <div class="card txt-up">
+                            <div class="card__position">
+                                <img src="img/cart.png" alt="" class="card__img">
+                                <span class="card__span card__position_span">
             			cart
             			</span>
-                                <span class="cart__span_price">
+                                <span class="card__span_price">
             			0
             			</span>
                             </div>
-                            <button class="button top">
+                            <button class="button txt-up">
                                 sign in
                             </button>
                         </div>
-             </div>   </div>
-            
-
+                    </div>
+                </div>
+            </div>
+    </div>
+    <div class="menu-header menu-header__position container">
+        <ul class="menu-header__list txt-up">
+            <li class="menu-header__li">Top Sales</li>
+            <li class="menu-header__li">Brand Focus</li>
+            <li class="menu-header__li">Hi-tech</li>
+            <li class="menu-header__li">Best Sellers</li>
+            <li class="menu-header__li">Projects</li>
+        </ul>
+        <div class="menu-header__block-right">
+            <span class="menu-header__span menu-header__span-position txt-up">
+                    		support
+                    	</span>
+            <img src="img/Search Icon.png" alt="" class="img-center">
+            <input type="search" placeholder="I'm looking for ..." class="menu-header__input-search">
+        </div>
+    </div>
+    </header>
+    <section class="phone-block ">
+        <div class="container__phone">
+            <div class="phone-block1 phone-block1__relative">
+                <h1 class="phone-block__h1">
+    		iPhone 6 32Gb<br>
+Black
+    	</h1>
+                <p class="phone-block__p phone-block__p_relative">
+                    At first, for some time, I was not able to answer him one word; but as he
+                    <br> had taken me in his arms I held fast by him, or I should have fallen to the
+                    <br>ground.
+                </p>
+                <button class="button button__buy button-position txt-up">
+                    buy now
+                </button>
+            </div>
+            <div class="phone-block2">
+                <img src="img/iphone__big.png" alt="" class="phone__bg">
+            </div>
+        </div>
+    </section>
+    </div>
 </body>
+
 </html>
