--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Black
                 </button>
             </div>
             <div class="phone-block2">
-                <img src="img/iphone__big.png" alt="" class="phone__bg">
+                <img src="img/iphone.png" alt="" class="phone__bg">
             </div>
         </div>
     </section>
