--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
                 <div class="container container__position">
                     <div class="block__flex">
                         <img src="img/logo.png" alt="">
-                        <ul class="top-menu">
-                            <li class="top-menu__li">Home</li>
-                            <li class="top-menu__li">Devices</li>
-                            <li class="top-menu__li">Delivery & Payment</li>
-                            <li class="top-menu__li">Guarantee</li>
-                            <li class="top-menu__li">About Us</li>
+                        <ul class="nav-menu">
+                            <li class="nav-menu__li">Home</li>
+                            <li class="nav-menu__li">Devices</li>
+                            <li class="nav-menu__li">Delivery & Payment</li>
+                            <li class="nav-menu__li">Guarantee</li>
+                            <li class="nav-menu__li">About Us</li>
                         </ul>
-                        <div class="card txt-up">
-                            <div class="card__position">
-                                <img src="img/cart.png" alt="" class="card__img">
-                                <span class="card__span card__position_span">
+                        <div class="cart text">
+                            <div class="cart__position">
+                                <img class="cart__img" src="img/cart.png" alt="">
+                                <span class="cart__span cart__position_span">
             			cart
             			</span>
-                                <span class="card__span_price">
+                                <span class="cart__span_price">
             			0
             			</span>
                             </div>
-                            <button class="button txt-up">
+                            <button class="button text">
                                 sign in
                             </button>
                         </div>
@@ -55,7 +55,7 @@
             <span class="menu-header__span menu-header__span-position txt-up">
                     		support
                     	</span>
-            <img src="img/Search Icon.png" alt="" class="img-center">
+            <img class="img-center" src="img/Search.png" alt="search">
             <input type="search" placeholder="I'm looking for ..." class="menu-header__input-search">
         </div>
     </div>
