--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Iphone 6</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -43,20 +41,20 @@
                 </div>
             </div>
     </div>
-    <div class="menu-header menu-header__position container">
-        <ul class="menu-header__list txt-up">
-            <li class="menu-header__li">Top Sales</li>
-            <li class="menu-header__li">Brand Focus</li>
-            <li class="menu-header__li">Hi-tech</li>
-            <li class="menu-header__li">Best Sellers</li>
-            <li class="menu-header__li">Projects</li>
+    <div class="header-menu header-menu__position container">
+        <ul class="header-menu__list text">
+            <li class="header-menu__li">Top Sales</li>
+            <li class="header-menu__li">Brand Focus</li>
+            <li class="header-menu__li">Hi-tech</li>
+            <li class="header-menu__li">Best Sellers</li>
+            <li class="header-menu__li">Projects</li>
         </ul>
-        <div class="menu-header__block-right">
-            <span class="menu-header__span menu-header__span-position txt-up">
+        <div class="header-menu__block-right">
+            <span class="header-menu__span header-menu__span-position text">
                     		support
                     	</span>
             <img class="img-center" src="img/Search.png" alt="search">
-            <input type="search" placeholder="I'm looking for ..." class="menu-header__input-search">
+            <input type="search" placeholder="I'm looking for ..." class="header-menu__input-search">
         </div>
     </div>
     </header>
