--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     </div>
 
-      <div class="second-menu">
+      <div class="header__main-menu">
 
       	<ul class="second-menu__list_left">
       		<li class="second-menu__list_left_gray">
