--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
           <img class="header__logo_left" src="img/logo.png">
 
           <ul class="header__top-menu">
-          	<li class="header__top-menu__item-list">Home</li>
-          	<li class="header__top-menu__item-list">Devices</li>
-          	<li class="header__top-menu__item-list">Delivery&Payment</li>
-          	<li class="header__top-menu__item-list">Guarantees</li>
-          	<li class="header__top-menu__item-list">About Us</li>
+          	<li class="header__top-menu__item-list">
+              <a class="top-menu__link">Home</a></li>
+          	<li class="header__top-menu__item-list">
+            <a class="top-menu__link">Devices</a></li>
+          	<li class="header__top-menu__item-list">
+            <a class="top-menu__link">Delivery&Payment</a></li>
+          	<li class="header__top-menu__item-list">
+            <a class="top-menu__link">Guarantees</a></li>
+          	<li class="header__top-menu__item-list">
+            <a class="top-menu__link">About Us</a></li>
           	
           </ul>
         
