--- a/index.html
+++ b/index.html
@@ -89,6 +89,29 @@
 
 </div>
 
+<section>
+  <div class="iphone__product">
+    <div class="iphone__product__description">
+      <div class="iphone__product__description__h1">iPhone 6 32Gb<br>Black</div>
+      <div class="iphone__product__description__text">
+        At first, for some time, I was not able to answer him one word;<br>
+        but as he had taken me in his arms I held fast by him, or I should<br>
+        have fallen to the ground.
+      </div>
+      <div class="iphone__product__description__button">
+        <button class="iphone__product__button_blue">Buy Now</button>
+      </div>
+      
+    </div>
+
+    <div class="iphone__product__image">
+      <img class="iphone__product__image_big" src="img/iphone.png">
+    </div>
+    
+  </div>
+  
+</section>
+
 
 </body>
 
