--- a/index.html
+++ b/index.html
@@ -89,15 +89,11 @@
 
 </div>
 
-<section style="background-image: url(https://yadi.sk/i/JKV42wC73NpSvD);">
+<section class="iphone__image">
  
   
 </section>
 
 
 </body>
-
-       
-
-
 </html>
