--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
           <ul class="header__top-menu">
           	<li class="header__top-menu__item-list_black">
-              <a class="top-menu__link">Home</a></li>
+              <a href class="top-menu__link">Home</a></li>
           	<li class="header__top-menu__item-list_black">
-            <a class="top-menu__link">Devices</a></li>
+            <a href class="top-menu__link">Devices</a></li>
           	<li class="header__top-menu__item-list_black">
-            <a class="top-menu__link">Delivery&Payment</a></li>
+            <a href class="top-menu__link">Delivery&Payment</a></li>
           	<li class="header__top-menu__item-list_black">
-            <a class="top-menu__link">Guarantees</a></li>
+            <a href class="top-menu__link">Guarantees</a></li>
           	<li class="header__top-menu__item-list_black">
-            <a class="top-menu__link">About Us</a></li>
+            <a href class="top-menu__link">About Us</a></li>
           	
           </ul>
         
