--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 
 </div>
 
-<section>
+<section style="background-image: url(img/iphone2.png);">
   <div class="iphone">
-      <div class="iphone__product" style="background-image: url(img/iphone2.png);">
+
+      <div class="iphone__product">
     
       </div>
   </div>  
