--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
+      <style>
+   body {
+    background-image: url(img/iphone2); /* Путь к фоновому изображению */
+    background-color: #c7b39b; /* Цвет фона */
+   }
+  </style>
 </head>
 
 <body>
