--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
       <style>
-   body {
-    background-image: url(img/iphone2); /* Путь к фоновому изображению */
+   section {
+    background-image: url(img/Placeholder.png); /* Путь к фоновому изображению */
     background-color: #c7b39b; /* Цвет фона */
    }
   </style>
@@ -95,12 +95,10 @@
 
 </div>
 
-<section style="background-image: url(img/iphone2.png);">
-  <div class="iphone">
+<section class="iphone">
 
       <div class="iphone__product">
     
-      </div>
   </div>  
   
 </section>
