--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     </div>
 
-      <div class="header__main-menu">
+      <div class="header__second-menu">
 
         <ul class="second-menu__list_left">
           <li class="second-menu__list_left_gray">
