--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
 </div>
 
-<section class="iphone">
 
-      <div class="iphone__product">
+
+<div class="iphone">
     
   </div>  
   
-</section>
+
 
 
 </body>
