--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     </div>
 
-      <div class="header__second-menu">
+      <div class="second-menu">
 
         <ul class="second-menu__list_left">
           <li class="second-menu__list_left_gray">
