--- a/index.html
+++ b/index.html
@@ -90,14 +90,25 @@
       </div>
 
 
-
 <div class="iphone">
+  <div class="iphone__description">
+    <div class="iphone__description__title">
+      <h1>iPhone 6 32Gb<br>
+      Black</h1>
+
+      <p>At first, for some time, I was not able to answer him one word;<br>
+        but as he had taken me in his arms I held fast by him, or I should<br>
+         have fallen to the ground. </p>
+
+         <div class="iphone__description__title__button">
+           <a class="iphone__description__title__button__link" href="#">Buy now</a>
+         </div>
+      
+    </div>
+
+  </div>
     
   </div>  
-
-  <section></section>
-  
-
 
 
 </body>
