--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </li>
             <li class="second-menu__list_right_gray">
               <img class="support-search__icon" src="img/search.png">
-              <input class="support-search support-search__failed_right" type="text" placeholder="I'm looking for ...">
+              <input class="support-search__failed_right" type="text" placeholder="I'm looking for ...">
             </li>
             
           </ul>
