--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
 
       <div class="second-menu">
 
-        <ul class="second-menu__list_left">
-          <li class="second-menu__list_left_gray">
+        <ul class="second-menu__list__left">
+          <li class="second-menu__li__left">
             <a class="second-menu__list__link_left">TOP SALES</a>
           </li>
-          <li class="second-menu__list_left_gray">
+          <li class="second-menu__li__left">
             <a class="second-menu__list__link_left">BRAND FOCUS</a>
           </li>
-          <li class="second-menu__list_left_gray">
+          <li class="second-menu__li__left">
             <a class="second-menu__list__link_left">HI-TECH</a>
           </li>
-          <li class="second-menu__list_left_gray">
+          <li class="second-menu__li__left">
             <a class="second-menu__list__link_left">BEST SELLERS</a>
           </li>
-          <li class="second-menu__list_left_gray">
+          <li class="second-menu__li__left">
             <a class="second-menu__list__link_left">PROJECTS</a>
           </li>
 
-          <li class="second-menu__list_left_gray__right">
+          <li class="second-menu__li__left second-menu__li__left__right">
               <a class="second-menu__list__link_right">SUPPORT</a>
             </li>
           
