--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="search-form__border">
 
               <img class="search-form__icon" src="img/search.png">
-              <input class="search-form__failed_right" type="text" placeholder="I'm looking for ...">
+              <input class="search-form__failed_right" type="text" placeholder="I'm looking for ..." style="border: none;">
           
         </div>
 
