--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   
-<div class="header">
+<div class="wrapper">
+ <div class="header">
   <div class="header__main-menu">
     <div class="header__logo_">
           
@@ -108,6 +109,8 @@
   </div>
     
   </div>  
+
+</div>
 
 
 </body>
