--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -23,21 +23,21 @@
         <div class="project__image">
           <img src="img/work.png">
           </div>
-          <h4>Позвольте вашим деньгам работать</h4>
+          <h4>Позвольте вашим <br>деньгам работать</h4>
           <p>Проценты по договорам займа выше банковских</p>
       </div>
       <div class="project col-md-3 col-sm-6">
         <div class="project__image">
           <img src="img/money.png">
           </div>
-          <h4>Зарабатывайте вместе с нами</h4>
+          <h4>Зарабатывайте<br> вместе с нами</h4>
           <p>Мы вкладываем собственные средства</p>
       </div>
       <div class="project col-md-3 col-sm-6">
         <div class="project__image">
           <img src="img/home.png">
           </div>
-          <h4>Абсолютная надежность</h4>
+          <h4>Абсолютная<br> надежность</h4>
           <p>Все договоры займа обеспечены залогом</p>
         
       </div>
@@ -45,7 +45,7 @@
         <div class="project__image">
           <img src="img/no_risks.png">
           </div>
-          <h4>Никаких рисков</h4>
+          <h4>Никаких<br> рисков</h4>
           <p>Наша профессиональная деятельность застрахована</p>
         
       </div>
