--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hosting</title>
+    <title>Lesson 9</title>
 
     <!--Google font-->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
@@ -21,9 +21,9 @@
 			<div class="container">
 				<div class="row">
 				<div class="col-md-2">
-					<div class="header-logo">
-						<img class="header-logo-img" src="img/logo.png" alt="logo">
-						<span class="header-logo-text">
+					<div class="header-logos">
+						<img class="header-logos-image" src="img/Shape.svg" alt="logos">
+						<span class="header-logos-txt">
 							Maguwo<strong>Host</strong>
 						</span>
 					</div>
