--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lesson 9</title>
 
-    <!--Google font-->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
 
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
     <link rel="stylesheet" href="less/stye.less">
@@ -22,28 +20,28 @@
 				<div class="row">
 				<div class="col-md-2">
 					<div class="header-logos">
-						<img class="header-logos-image" src="img/Shape.svg" alt="logos">
+						<img class="header-logos-image" src="img/logos.png" alt="logos">
 						<span class="header-logos-txt">
 							Maguwo<strong>Host</strong>
 						</span>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<ul class="header-nav">
-						<li class="naw-item item-active"><a href="#">home</a></li>
-						<li class="naw-item"><a href="#">about</a></li>
-						<li class="naw-item"><a href="#">pricing</a></li>
-						<li class="naw-item"><a href="#">domain</a></li>
-						<li class="naw-item"><a href="#">hosting</a></li>
+					<ul class="header-top-nav">
+						<li class="naw-link item-active"><a href="#">home</a></li>
+						<li class="naw-link"><a href="#">about</a></li>
+						<li class="naw-link"><a href="#">pricing</a></li>
+						<li class="naw-link"><a href="#">domain</a></li>
+						<li class="naw-link"><a href="#">hosting</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<div class="header-callback">
-						<div class="header-callback_text">
+					<div class="header-call">
+						<div class="header-call_txt">
 							<p>Do you need help ? Just Email, Live chat or Call us</p>
 						</div>
-						<a class="header-callback_btn" href="#">Live Chat</a>
-						<a class="header-callback_phone" href="#">6284-6534</a>
+						<a class="header-call_btn" href="#">Live Chat</a>
+						<a class="header-call_number" href="#">6284-6534</a>
 					</div>
 				</div>
 			</div>
@@ -54,7 +52,7 @@
 				<div class="header-text-block">
 					<h1>Just a Proffesional Web Hosting Services</h1>
 					<p>modern  -  fast  -  reliable</p>
-					<img class="header-main-img" src="img/shape.png" alt="main-img">
+					<img class="header-main-image" src="img/shape.png" alt="main-image">
 				</div>
 				<div class="main-form-block">
 					<form action="#">
@@ -65,8 +63,6 @@
 			</div>
 		</div>
     </header>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     </body>
 </html>
