--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
   </head>
   <body>
-    <h2><span>Working</span> Process</h2>
+    <h2><span class="work-span">Working</span> Process</h2>
     <p>Lorem ipsum dolor sit amet consectet ur adipiscing elit Vestibulum bibend um vestibulum.</p>
     <div class="work">
     	<div class="container">
