--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -19,7 +19,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-3 col-sm-6 center">
-    				<div class="box one">
+    				<div class="box box-one">
     					<i class="fa fa-magnet"></i>
     					<h4>Koc Koi Tomi</h4>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -28,7 +28,7 @@
     				</div>
     			</div>
     			<div class="col-md-3 col-sm-6 center">
-    				<div class="box second">
+    				<div class="box box-second">
     					<i class="fa fa-bug"></i>
     					<h4>Koimona Set</h4>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -37,7 +37,7 @@
     				</div>
     			</div>
     			<div class="col-md-3 col-sm-6 center">
-    				<div class="box three">
+    				<div class="box box-three">
     					<i class="fa fa-cogs"></i>
     					<h4>Setting Koire</h4>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -46,7 +46,7 @@
     				</div>
     			</div>
     			<div class="col-md-3 col-sm-6 center">
-    				<div class="box forth">
+    				<div class="box box-forth">
     					<i class="fa fa-camera-retro"></i>
     					<h4>Ko Image Lara</h4>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
