--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -23,8 +23,7 @@
     					<i class="fa fa-magnet"></i>
     					<h3>Koc Koi Tomi</h3>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    					<i class="fa fa-plus"></i>
-    					<a class="button" href="#">Know More</a>
+    					<a class="button" href="#"><i class="fa fa-plus"></i>Know More</a>
     					
     				</div>
     			</div>
@@ -33,8 +32,7 @@
     					<i class="fa fa-bug"></i>
     					<h3>Koimona Set</h3>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    					<i class="fa fa-plus"></i>
-    					<a class="button" href="#">Know More</a>
+    					<a class="button" href="#"><i class="fa fa-plus"></i>Know More</a>
     				</div>
     			</div>
     			<div class="col-md-3 col-sm-6 center">
@@ -42,8 +40,7 @@
     					<i class="fa fa-cogs"></i>
     					<h3>Setting Koire</h3>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    					<i class="fa fa-plus"></i>
-    					<a class="button" href="#">Know More</a>
+    					<a class="button" href="#"><i class="fa fa-plus"></i>Know More</a>
     				</div>
     			</div>
     			<div class="col-md-3 col-sm-6 center">
@@ -51,8 +48,7 @@
     					<i class="fa fa-camera-retro"></i>
     					<h3>Ko Image Lara</h3>
     					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    					<i class="fa fa-plus"></i>
-    					<a class="button" href="#">Know More</a>
+    					<a class="button" href="#"><i class="fa fa-plus"></i>Know More</a>
     				</div>
     			</div>
     		</div>
