--- a/flex/index.html
+++ b/flex/index.html
@@ -15,7 +15,7 @@
      	<div class="image image-1"><span>Лето</span></div>
      	<div class="image image-2"><span>Это</span></div>
      	<div class="image image-3"><span>Очень</span></div>
-     	<div class="image image-4"><span>Круто</span></div>
+     	<div class="image image-4"><span>Круто!</span></div>
      </div>
   </body>
 </html>
