--- a/jquery/index.html
+++ b/jquery/index.html
@@ -18,7 +18,7 @@
 		</span>
 	</a>
 	
-	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src='js/jquery-3.2.1.min.js'></script>
 	<script>
 		$(document).ready(function(){
 			var link = $('.menu-link');
