--- a/lessons20/index.html
+++ b/lessons20/index.html
@@ -63,7 +63,12 @@
 			</div>
 			</div>
 			</div>
-			<div class="container">
+
+            <section>
+            	<div class="parallax-window" data-parallax="scroll" data-image-src="img/15822728.jpg"></div>
+            </section>
+
+			<div class="container  content">
 				<div class="row">
 					<div class="col-md-12">
 						<div class="whatwedo text-center">
@@ -100,5 +105,6 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.vide.min.js"></script>
+	<script src="js/parallax.min.js"></script>
 	</body>
 </html>
