--- a/form/index.html
+++ b/form/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	</head>
 	<body>
+<header>		
 		<div class="container">
 			<img class="bubbles-top" src="img/bubles-top.png" alt=""/>
 			<div class="form">
@@ -40,6 +41,7 @@
 			</div>
 			<img class="bubbles-btm" src="img/bubles-btm.png" alt="">
 		</div>
+</header>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/jquery.validate.min.js"></script>
 		<script type="text/javascript">
